admin news page. Added pagination + page header + some styles

--- a/app/views/layouts/admin.phtml
+++ b/app/views/layouts/admin.phtml
@@ -25,16 +25,16 @@
                 <a href="#"><span class="black-text email center-align"><?= $admin->email ?></span></a>
             </div>
         </li>
-        <li> <?= $this->tag->linkTo('admin/news', 'Jaunumi'); ?> </li>
-        <li> <?= $this->tag->linkTo('admin/pages', 'Lapas'); ?></li>
-        <li> <?= $this->tag->linkTo('admin/languages', 'Valodas');?></li>
-        <li> <?= $this->tag->linkTo('admin/seo', 'SEO iestatījumi');?></li>
-        <li> <?= $this->tag->linkTo('admin/feedback', 'Atsauksmes');?></li>
-        <li> <?= $this->tag->linkTo('admin/categories', 'Kategorijas');?></li>
-        <li> <?= $this->tag->linkTo('admin/applications_for_courses', 'Pieteikšanās kursiem') ?></li>
-        <li> <?= $this->tag->linkTo('admins/instructors', 'Pasniedzēji');?></li>
-        <li> <?= $this->tag->linkTo('admin/pols', 'Aptaujas');?></li>
-        <li> <?= $this->tag->linkTo('admin/contacts', 'Kontaktinformācija')?> </li>
+        <li> <?= $this->tag->linkTo('admin/news', 'Новости'); ?> </li>
+        <li> <?= $this->tag->linkTo('admin/pages', 'Страницы'); ?></li>
+        <li> <?= $this->tag->linkTo('admin/languages', 'Языки');?></li>
+        <li> <?= $this->tag->linkTo('admin/seo', 'Настройки SEO');?></li>
+        <li> <?= $this->tag->linkTo('admin/feedback', 'Отзывы');?></li>
+        <li> <?= $this->tag->linkTo('admin/categories', 'Категории');?></li>
+        <li> <?= $this->tag->linkTo('admin/applications_for_courses', 'Заявки на курсы') ?></li>
+        <li> <?= $this->tag->linkTo('admins/instructors', 'Инструкторы');?></li>
+        <li> <?= $this->tag->linkTo('admin/pols', 'Опросы');?></li>
+        <li> <?= $this->tag->linkTo('admin/contacts', 'Контактная информация')?> </li>
     </ul>
 
     <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
