--- a/app/views/admin/news.phtml
+++ b/app/views/admin/news.phtml
@@ -1,9 +1,20 @@
 <div class="row">
-    <div class="col s3 l3 m3">
-        <?php foreach ($news as $new) { ?>
+    <div class="col s6 m6 l6" style="margin-top: -30px">
+        <h5 class="teal-text">
+            Последние добавленные новости
+        </h5>
+    </div>
+    <div class="col s6 m6 l6 right-align" style="margin-top: -26px">
+        <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+    </div>
+</div>
+<div class="divider"></div>
+<div class="row">
+    <?php foreach ($news->items as $new) { ?>
+        <div class="col s3 l3 m3">
             <div class="card hoverable small">
                 <div class="card-image">
-                    <img src="<?= $new->image ?>">
+                    <img src="/<?= $new->image ?>">
                     <span class="card-title"><?= $new->title ?></span>
                 </div>
                 <div class="card-content">
@@ -13,12 +24,26 @@
                 </div>
                 <div class="card-action">
                     <?= $this->tag->linkTo('news/'.$new->id, $new->title) ?>
-                    <?= $this->tag->linkTo('news/edit/'.$new->id, 'Labot', 'class => red-text') ?>
+                    <?= $this->tag->linkTo(['news/'.$new->id, 'Labot', 'class' => 'red-text']) ?>
                 </div>
             </div>
-        <? } ?>
-    </div>
-    <div class="col s6 l6 m6">
-        456
-    </div>
+        </div>
+    <? } ?>
 </div>
+
+<ul class="pagination">
+    <li class="<?= ($news->before  < 1) ? 'disabled' : 'waves-effect' ?>">
+        <?= $this->tag->linkTo(['admin/news/page/'.$news->before, '<i class="material-icons">chevron_left</i>']) ?>
+    </li>
+    <li class="waves-effect active">
+        <?= $this->tag->linkTo(['admin/news/page/'.$news->current, $news->current]) ?>
+    </li>
+    <? if($news->total_pages > 1) { ?>
+        <li class="<?= ($news->next  > $news->total_pages) ? 'disabled' : 'waves-effect' ?>">
+            <?= $this->tag->linkTo(['admin/news/page/'.$news->next, $news->next]) ?>
+        </li>
+    <? } ?>
+    <li class="waves-effect">
+        <?= $this->tag->linkTo(['admin/news/page/'.$news->last, '<i class="material-icons">chevron_right</i>']) ?>
+    </li>
+</ul>
