--- a/app/views/admin/news.phtml
+++ b/app/views/admin/news.phtml
@@ -14,17 +14,27 @@
         <div class="col s3 l3 m3">
             <div class="card hoverable small">
                 <div class="card-image">
-                    <img src="/<?= $new->image ?>">
-                    <span class="card-title"><?= $new->title ?></span>
+                    <img src="/<?= ($new->image != null) ? $new->image : 'img/noimage.png' ?>">
+                    <span class="card-title"><?= substr($new->title, 0 ,20) ?></span>
                 </div>
                 <div class="card-content">
                     <p>
-                        <?= $new->shortDescription ?>
+                        <?= substr($new->shortDescription, 0 ,20) ?>
                     </p>
                 </div>
-                <div class="card-action">
-                    <?= $this->tag->linkTo('news/'.$new->id, $new->title) ?>
-                    <?= $this->tag->linkTo(['news/edit/'.$new->id, 'Редактировать', 'class' => 'red-text']) ?>
+                <div class="card-action" style="padding-bottom: 0px">
+                    <div class="row">
+                        <div class="col s12 m12 l12">
+                            <?= $this->tag->linkTo('news/'.$new->id, substr($new->title, 0 ,20).'...') . '<br><br>' ?>
+                        </div>
+                        <div class="col s12 m12 l12">
+                            <div class="left">
+                                <?= $this->tag->linkTo(['news/edit/'.$new->id, '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn']) ?>
+                                <?= $this->tag->linkTo(['news/delete/'.$new->id, '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light red btn delete-new-btn', 'id' => $new->id]) ?>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -56,23 +66,23 @@
 <div id="add-news-modal" class="modal">
     <div class="modal-content">
         <div class="row">
-            <form class="col s12 add-news-form" method="post" action="#">
+            <form class="col s12 add-news-form">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input placeholder="Заголовок" id="title" name="news-title" type="text" class="validate">
-                        <label for="title">Заголовок</label>
+                        <input placeholder="Заголовок" id="title" name="title" type="text" class="validate">
+                        <label for="news-title">Заголовок</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <textarea  value="Краткое описание" type="text" name="news-short-description" class="materialize-textarea validate" length="200"> </textarea>
-                        <label for="disabled">Краткое описание</label>
+                        <textarea  value="Краткое описание" type="text" id="news-short-description" name="shortDescription" class="materialize-textarea validate" length="200"> </textarea>
+                        <label for="news-short-description">Краткое описание</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <textarea  value="Короткое описание" type="text" name="news-full-description" class="materialize-textarea classy-editor validate"> </textarea>
-                        <label for="disabled" style="padding-bottom: 10px">Полное описание</label>
+                        <textarea  value="Короткое описание" type="text" id="news-full-description" name="fullDescription" class="materialize-textarea classy-editor validate"> </textarea>
+                        <label for="news-full-description" style="padding-bottom: 10px">Полное описание</label>
                     </div>
                 </div>
                 <div class="row">
@@ -82,26 +92,22 @@
                             <input type="file">
                         </div>
                         <div class="file-path-wrapper">
-                            <input class="file-path validate" type="text" placeholder="Выберите изображение">
+                            <input class="file-path validate" name="image" type="text" placeholder="Выберите изображение">
                         </div>
                     </div>
                 </div>
+
                 <div class="row">
-                    <div class="input-field col s12">
-                        <ul class="collapsible" data-collapsible="accordion" style="width: 640px !important; margin-left: -13px">
-                            <li>
-                                <div class="collapsible-header"><i class="material-icons">language</i>Язык новости</div>
-                                <div class="collapsible-body">
-                                    <?php foreach ($languages as $lang) { ?>
-                                        <? $ruSelected = ($lang->id == 3) ? 'checked' : '' ?>
-                                        <p>
-                                            <input name="languages" class="with-gap" type="radio" id="<?= $lang->code ?>" <?= $ruSelected  ?> >
-                                            <label for="<?= $lang->code ?>"> <?= $lang->name ?></label>
-                                        </p>
-                                    <?php } ?>
-                                </div>
-                            </li>
-                        </ul>
+                    <div class="col s12 input-field" style="width: 735px !important; margin-left: -13px;">
+
+                        <select name="languageId">
+                            <?php foreach ($languages AS $language) { ?>
+                                <?php  $selected = ($language->id == 3) ? ' selected ' : '' ?>
+                                <option value="<?php echo $language->id ?>"> <?php echo $language->name ?></option>
+                            <? } ?>
+                        </select>
+                        <label>Язык новости</label>
+
                     </div>
                 </div>
 
@@ -109,23 +115,25 @@
                     <div class="col s12 input-field">
                         <ul class="collapsible" data-collapsible="accordion" style="width: 640px !important; margin-left: -13px">
                             <li>
-                                <div class="collapsible-header"><i class="material-icons">settings</i>SEO Настройки</div>
+                                <div class="collapsible-header">
+                                    <i class="material-icons">settings</i>SEO Настройки
+                                </div>
                                 <div class="collapsible-body">
                                     <div class="row" style="margin-top: 10px">
                                         <div class="input-field col s12">
-                                            <input placeholder="SEO Заголовок" id="news-seo-title" name="news-seo-title" type="text" class="validate">
-                                            <label for="title">SEO Заголовок</label>
+                                            <input placeholder="SEO Заголовок" id="news-seo-title" name="seoTitle" type="text" class="validate">
+                                            <label for="news-seo-title">SEO Заголовок</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="input-field col s12">
-                                            <input placeholder="SEO ключевые слова" id="news-seo-keywords" name="news-seo-keywords" type="text" class="validate">
-                                            <label for="title">SEO ключевые слова</label>
+                                            <input placeholder="SEO ключевые слова" id="news-seo-keywords" name="seoKeywords" type="text" class="validate">
+                                            <label for="news-seo-keywords">SEO ключевые слова</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="input-field col s12">
-                                            <textarea  value="SEO описание" type="text" name="news-seo-description" class="materialize-textarea validate" length="160"> </textarea>
+                                            <textarea  value="SEO описание" type="text" name="seoDescription" class="materialize-textarea validate" length="160"> </textarea>
                                             <label for="news-seo-description">SEO описание</label>
                                         </div>
                                     </div>
@@ -139,7 +147,7 @@
                         <div class="switch">
                             <label>
                                 Скрыть
-                                <input type="checkbox">
+                                <input type="checkbox" name="published" id="published">
                                 <span class="lever"></span>
                                 Опубликовать
                             </label>
@@ -148,13 +156,12 @@
                 </div>
                 <div class="row">
                     <div class="col s12 input-field center" style="margin-top: 30px;">
-                        <button class="btn waves-effect waves-light submit-news" type="submit" name="action">Добавить
-                            <i class="material-icons right">send</i>
+                        <button class="btn waves-effect waves-light submit-news" type="submit" name="action">
+                            Добавить<i class="material-icons right">send</i>
                         </button>
                     </div>
                 </div>
             </form>
         </div>
-
     </div>
 </div>
