--- a/app/views/admin/news.phtml
+++ b/app/views/admin/news.phtml
@@ -1,3 +1,6 @@
+<?
+ use library\Utils\Slug;
+?>
 <div class="row">
     <div class="col s6 m6 l6" style="margin-top: -30px">
         <h5 class="teal-text">
@@ -15,7 +18,7 @@
             <div class="card hoverable small">
                 <div class="card-image">
                     <img src="/<?= ($new->image != null) ? $new->image : 'img/noimage.png' ?>">
-                    <span class="card-title"><?= substr($new->title, 0 ,20) ?></span>
+                    <span class="card-title"><?= substr($new->title, 0 ,20) ?>...</span>
                 </div>
                 <div class="card-content">
                     <p>
@@ -25,14 +28,14 @@
                 <div class="card-action" style="padding-bottom: 0px">
                     <div class="row">
                         <div class="col s12 m12 l12">
-                            <?= $this->tag->linkTo('news/'.$new->id, substr($new->title, 0 ,20).'...') . '<br><br>' ?>
+                            <?= $this->tag->linkTo([$new->getLink(), substr($new->title, 0 ,20).'...', 'title' => "$new->title"]) . '<br><br>' ?>
                         </div>
                         <div class="col s12 m12 l12">
                             <div class="left">
-                                <?= $this->tag->linkTo(['news/edit/'.$new->id, '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn']) ?>
+                                <?= $this->tag->linkTo(['news/edit/'.$new->id, '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn', 'title' => 'Редактировать']) ?>
                             </div>
                             <div class="right">
-                                <?= $this->tag->linkTo(['news/delete/'.$new->id, '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light btn  red lighten-1 delete-new-btn', 'id' => $new->id]) ?>
+                                <?= $this->tag->linkTo(['news/delete/'.$new->id, '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light btn  red lighten-1 delete-new-btn', 'id' => $new->id, 'title' => 'Удалить']) ?>
                             </div>
                         </div>
                     </div>
