--- a/app/views/admin/languages.phtml
+++ b/app/views/admin/languages.phtml
@@ -52,7 +52,7 @@
     <div class="modal-content">
         <div class="row">
             <?=  Phalcon\Tag::form(array("languages/add", "method" => "post", 'class' => 'col s12 m12 l12', 'id' => 'language-add-form')); ?>
-                <input type="hidden" id="lstat" value="new" name="lstat">
+                <input type="hidden" id="lstat" value="" name="lstat">
                 <div class="row">
                     <div class="input-field col s12 m12 l12">
                         <input placeholder="Язык" id="language_name" name="name" type="text" class="validate">
