New users adding. UsersController

--- a/app/views/layouts/admin.phtml
+++ b/app/views/layouts/admin.phtml
@@ -35,6 +35,7 @@
         <li> <?= $this->tag->linkTo('admins/instructors', 'Инструкторы');?></li>
         <li> <?= $this->tag->linkTo('admin/pols', 'Опросы');?></li>
         <li> <?= $this->tag->linkTo('admin/contacts', 'Контактная информация')?> </li>
+        <li> <?= $this->tag->linkTo('admin/users', 'Администраторы')?> </li>
     </ul>
 
     <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
