--- a/app/views/admin/users.phtml
+++ b/app/views/admin/users.phtml
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="input-field col s12 m12 l12">
                     <input placeholder="Имя пользователя" id="username-add" name="username" type="text" class="validate">
-                    <label for="username-add">Имя пользователя</label>
+                    <label for="username-add" data-error="Error message">Имя пользователя</label>
                 </div>
             </div>
             <div class="row">
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="input-field col s12 m12 l12">
                     <input placeholder="Фамилия" id="lastname-add" name="lastname" type="text" class="validate">
-                    <label for="lastname-add">Фамилия</label>
+                    <label for="lastname-add" >Фамилия</label>
                 </div>
             </div>
             <div class="row">
@@ -87,11 +87,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 m12 l12">
+                <div class="col s12 m12 l12 center-align">
                     <?= Phalcon\Tag::submitButton(['Сохранить', 'class' => 'btn waves-effect waves-light submit-user-add' ]) ?>
                 </div>
             </div>
             <?= \Phalcon\Tag::endForm(); ?>
+        </div>
+        <div class="row">
+            <div class="col s12 validation-errors">
+                <ul>
+
+                </ul>
+            </div>
         </div>
     </div>
 </div>
