--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,3 +51,10 @@
 .toast{
     background-color: lightgreen !important;
 }
+
+.validation-errors ul li{
+    color: red;
+    list-style: circle;
+    margin-bottom: 4px;
+    font-size: large;
+}
