--- a/app/views/admin/users.phtml
+++ b/app/views/admin/users.phtml
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="input-field col s12 m12 l12">
                     <input placeholder="Имя пользователя" id="username-add" name="username" type="text" class="validate">
-                    <label for="username-add" data-error="Error message">Имя пользователя</label>
+                    <label for="username-add">Имя пользователя</label>
                 </div>
             </div>
             <div class="row">
