pages add/edit/delete

--- a/app/views/admin/pages/index.phtml
+++ b/app/views/admin/pages/index.phtml
@@ -5,7 +5,7 @@
         </h5>
     </div>
     <div class="col s6 m6 l6 right-align" style="margin-top: -26px">
-        <a class="btn-floating btn-large waves-effect waves-light red modal-trigger add-page-modal" href="#add-page-modal"><i class="material-icons">add</i></a>
+        <a class="btn-floating btn-large waves-effect waves-light red modal-trigger add-page-modal" href="/admin/pages/add"><i class="material-icons">add</i></a>
     </div>
 </div>
 <div class="row">
@@ -16,107 +16,31 @@
                 <th data-field="language">Заголовок</th>
                 <th data-field="code">Дата добавления</th>
                 <th data-field="visible">Язык</th>
-                <th data-field="actions">Управление</th>
+                <th data-field="actions" class="center-align">Управление</th>
             </tr>
             </thead>
             <tbody>
             <?php foreach ($pages as $page) {?>
                 <tr>
                     <td id="name">
-                        <?= $lang->title?>
+                        <?= $page->title?>
                     </td>
                     <td id="code">
-                        <?= $lang->dateAdded?>
+                        <?= $page->dateAdded?>
                     </td>
                     <td id="visible">
-                        <?= $lang->languageId ?>
+                        <?= $langsMap[$page->languageId] ?>
                     </td>
                     <td>
-                        <div class="left">
-                            <?= $this->tag->linkTo(['#', '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn edit-page-btn', 'title' => 'Редактировать', 'id' => "$page->id"]) ?>
-                        </div>
-                        <div class="right">
-                            <?= $this->tag->linkTo(['#'.$page->id, '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light btn  red lighten-1 delete-page-btn', 'id' => $page->id, 'title' => 'Удалить']) ?>
+                        <div class="center-align">
+                            <?= $this->tag->linkTo(['#', '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light btn  red lighten-1 delete-page-btn', 'id' => $page->id, 'title' => 'Удалить']) ?>
+
+                            <?= $this->tag->linkTo(['/admin/pages/edit/'. $page->id, '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn edit-page-btn', 'title' => 'Редактировать', 'id' => "$page->id"]) ?>
                         </div>
                     </td>
                 </tr>
             <?php } ?>
             </tbody>
         </table>
-    </div>
-
-</div>
-
-<div id="add-page-modal" class="modal">
-    <div class="modal-content">
-        <div class="row">
-            <form class="col s12 add-news-form">
-                <input type="hidden" id="nstat" value="" name="nstat">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input placeholder="Заголовок" id="title" name="title" type="text" class="validate">
-                        <label for="news-title">Название</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <textarea  value="Полное описание" type="text" id="page-description" name="pageContent" class="materialize-textarea validate"> </textarea>
-                        <label for="news-full-description" style="padding-bottom: 10px">Содержание страницы</label>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col s12 input-field">
-                        <ul class="collapsible" data-collapsible="accordion" style="width: 640px !important; margin-left: -13px">
-                            <li>
-                                <div class="collapsible-header">
-                                    <i class="material-icons">settings</i>SEO Настройки
-                                </div>
-                                <div class="collapsible-body">
-                                    <div class="row" style="margin-top: 10px">
-                                        <div class="input-field col s12">
-                                            <input placeholder="SEO Заголовок" id="news-seo-title" name="seoTitle" type="text" class="validate">
-                                            <label for="news-seo-title">SEO Заголовок</label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="input-field col s12">
-                                            <input placeholder="SEO ключевые слова" id="news-seo-keywords" name="seoKeywords" type="text" class="validate">
-                                            <label for="news-seo-keywords">SEO ключевые слова</label>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="input-field col s12">
-                                            <textarea  value="SEO описание" type="text" name="seoDescription" id="news-seo-description" class="materialize-textarea validate" length="160"> </textarea>
-                                            <label for="news-seo-description">SEO описание</label>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col s12 input-field" style="width:660px !important; margin-left: -13px;">
-                        <select name="languageId" id="language-id">
-                            <?php foreach ($languages AS $language) { ?>
-                                <?php  $selected = ($language->code == 'ru') ? ' selected ' : '' ?>
-                                <option value="<?php echo $language->id ?>" <?= $selected ?> > <?php echo $language->name ?></option>
-                            <? } ?>
-                        </select>
-                        <label>Язык новости</label>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col s12 input-field center" style="margin-top: 30px;">
-                        <button class="btn waves-effect waves-light submit-news" type="submit" name="action">
-                            Сохранить<i class="material-icons right">send</i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
     </div>
 </div>
