--- a/app/views/admin/pages/add.phtml
+++ b/app/views/admin/pages/add.phtml
@@ -10,14 +10,14 @@
         <input type="hidden" id="pstat" value="" name="pstat">
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Заголовок" id="title" name="title" type="text" class="validate">
-                <label for="news-title">Название</label>
+                <input placeholder="Заголовок" id="title" name="title" type="text" class="validate <?= (isset($errors['title'])) ? ' invalid' : '' ?>">
+                <label for="title" data-error="<?= (isset($errors['title'])) ? $errors['title'] : '' ?>">Название</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea  value="Полное описание" type="text" id="page-description" name="content" class="materialize-textarea validate"> </textarea>
-                <label for="news-full-description" style="padding-bottom: 10px">Содержание страницы</label>
+                <textarea  value="Полное описание" type="text" id="page-description" name="content" class="materialize-textarea validate <?= (isset($errors['content'])) ? ' invalid' : '' ?>"> </textarea>
+                <label for="page-description" data-error="<?= (isset($errors['content'])) ? $errors['content'] : '' ?>" data-error="" style="padding-bottom: 10px">Содержание страницы</label>
             </div>
         </div>
 
