--- a/app/views/admin/pages/add.phtml
+++ b/app/views/admin/pages/add.phtml
@@ -67,7 +67,7 @@
 
         <div class="row">
             <div class="col s12 input-field center" style="margin-top: 30px;">
-                <button class="btn waves-effect waves-light submit-news" type="submit" name="action">
+                <button class="btn waves-effect waves-light" type="submit">
                     Сохранить<i class="material-icons right">send</i>
                 </button>
             </div>
