--- a/app/views/admin/seo/index.phtml
+++ b/app/views/admin/seo/index.phtml
@@ -1,8 +1,16 @@
-<div class="row">
-    <div class="col s6 m6 l6" style="margin-top: -30px">
+<div class="row" style="margin-top: -30px">
+    <div class="col s4 m4 l4">
         <h5 class="teal-text">
             SEO настройки сайта
         </h5>
+    </div>
+    <div class="col s2 m2 l2">
+        <select id="site-seo-settings-language">
+            <?php foreach ($languages AS $language) { ?>
+                <?php $selected = ($language->id == $languageId) ? ' selected ' : '' ?>
+                <option value="<?= $language->id ?>" <?= $selected ?> > <?= $language->name ?></option>
+            <? } ?>
+        </select>
     </div>
 </div>
 
@@ -17,25 +25,26 @@
 </div>
 <div class="row">
     <div class="col s10 m10 l10">
-        <form id="main-seo-settings-form" action="/admin/seo/editmainsettings" method="POST" class="col s12 m12 l12">
-
+        <form id="main-seo-settings-form" action="/admin/seo/edit_main_seo_settings" method="POST" class="col s12 m12 l12">
+           <input type="hidden" value="<?= $languageId ?>" name="languageId">
             <div class="row">
                 <div class="input-field col s12 m12 l12">
-                    <input id="main-pagestitle" type="text" class="validate">
+                    <input id="main-pagestitle" name="mainPageTitle" type="text" value="<?= ($settings->mainPageTitle ?? '') ?>" class="validate">
                     <label for="main-page-title">Главный заголовок сайта</label>
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea  value="Полное описание" type="text" id="main-page-seo-description" class="materialize-textarea validate" length="160"> </textarea>
+                    <textarea  value="Полное описание" name="mainPageSeoDescription" type="text"  id="main-page-seo-description" class="materialize-textarea validate" length="160"><?= ($settings->mainPageSeoDescription ?? '') ?>
+                    </textarea>
                     <label for="main-page-seo-description" style="padding-bottom: 10px">SEO описание сайта</label>
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col s12 m12 l12">
-                    <input id="main-page-seo-keywords" type="text" class="validate">
+                    <input id="main-page-seo-keywords" name="mainPageSeoKeywords" type="text" value="<?= ($settings->mainPageSeoKeywords ?? '') ?>" class="validate">
                     <label for="main-page-seo-keywords">SEO ключевые слова</label>
                 </div>
             </div>
@@ -55,7 +64,7 @@
 <div class="row">
     <div class="col s6 m6 l6">
         <h6 class="teal-text">
-            Основной язык
+            Основной язык сайта
         </h6>
     </div>
 </div>
@@ -66,9 +75,9 @@
                 <div class="col s12 input-field" style="width:660px !important;">
                     <select name="languageId" id="site-language-id">
                         <?php foreach ($languages AS $language) { ?>
-                            <?php  $selected = ($language->id == $settings->defaultSiteLanguage) ? ' selected ' : '' ?>
+                            <?php  $selected = ($language->id == $defaultSiteLanguage) ? ' selected ' : '' ?>
 
-                            <option value="<?php echo $language->id ?>" <?= $selected ?> > <?php echo $language->name ?></option>
+                            <option value="<?= $language->id ?>" <?= $selected ?> > <?= $language->name ?></option>
                         <? } ?>
                     </select>
                 </div>
