--- a/app/views/admin/layouts/admin.phtml
+++ b/app/views/admin/layouts/admin.phtml
@@ -25,17 +25,17 @@
                 <a href="#"><span class="black-text email center-align"><?= $admin->email ?></span></a>
             </div>
         </li>
-        <li> <?= $this->tag->linkTo('admin/news', 'Новости'); ?> </li>
-        <li> <?= $this->tag->linkTo('admin/pages', 'Страницы'); ?></li>
-        <li> <?= $this->tag->linkTo('admin/languages', 'Языки');?></li>
-        <li> <?= $this->tag->linkTo('admin/seo', 'Настройки SEO');?></li>
-        <li> <?= $this->tag->linkTo('admin/feedback', 'Отзывы');?></li>
-        <li> <?= $this->tag->linkTo('admin/categories', 'Категории');?></li>
-        <li> <?= $this->tag->linkTo('admin/applications_for_courses', 'Заявки на курсы') ?></li>
-        <li> <?= $this->tag->linkTo('admins/instructors', 'Инструкторы');?></li>
-        <li> <?= $this->tag->linkTo('admin/pols', 'Опросы');?></li>
-        <li> <?= $this->tag->linkTo('admin/contacts', 'Контактная информация')?> </li>
-        <li> <?= $this->tag->linkTo('admin/users', 'Администраторы')?> </li>
+        <li> <?= $this->tag->linkTo('admin/news', 'Новости <i class="material-icons">speaker_notes</i>'); ?> </li>
+        <li> <?= $this->tag->linkTo('admin/pages', 'Страницы <i class="material-icons">bookmark_border</i>'); ?></li>
+        <li> <?= $this->tag->linkTo('admin/languages', 'Языки <i class="material-icons">language</i>');?></li>
+        <li> <?= $this->tag->linkTo('admin/seo', 'Настройки SEO <i class="material-icons">public</i>');?></li>
+        <li> <?= $this->tag->linkTo('admin/feedback', 'Отзывы <i class="material-icons">feedback</i>');?></li>
+        <li> <?= $this->tag->linkTo('admin/categories', 'Категории <i class="material-icons">toc</i>');?></li>
+        <li> <?= $this->tag->linkTo('admin/applications_for_courses', 'Заявки на курсы <i class="material-icons">receipt</i>') ?></li>
+        <li> <?= $this->tag->linkTo('admins/instructors', 'Инструкторы <i class="material-icons">supervisor_account</i>');?></li>
+        <li> <?= $this->tag->linkTo('admin/pols', 'Опросы <i class="material-icons">description</i>');?></li>
+        <li> <?= $this->tag->linkTo('admin/contacts', 'Контакты <i class="material-icons">settings_phone</i>')?> </li>
+        <li> <?= $this->tag->linkTo('admin/users', 'Администраторы  <i class="material-icons">info</i>')?> </li>
     </ul>
 
     <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
