--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,3 @@
-/* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
- */
 
 .icon-block {
   padding: 0 15px;
@@ -71,3 +64,9 @@
 .nav-wrapper .container ul {
     height: 100%;
 }
+
+.sortable-pages td:hover {
+    cursor: move;
+}
+
+
