--- a/app/views/admin/layouts/admin.phtml
+++ b/app/views/admin/layouts/admin.phtml
@@ -32,7 +32,7 @@
         <li> <?= $this->tag->linkTo('admin/feedback', 'Отзывы <i class="material-icons">feedback</i>');?></li>
         <li> <?= $this->tag->linkTo('admin/categories', 'Категории <i class="material-icons">toc</i>');?></li>
         <li> <?= $this->tag->linkTo('admin/applications_for_courses', 'Заявки на курсы <i class="material-icons">receipt</i>') ?></li>
-        <li> <?= $this->tag->linkTo('admins/instructors', 'Инструкторы <i class="material-icons">supervisor_account</i>');?></li>
+        <li> <?= $this->tag->linkTo('admin/instructors', 'Инструкторы <i class="material-icons">supervisor_account</i>');?></li>
         <li> <?= $this->tag->linkTo('admin/pols', 'Опросы <i class="material-icons">description</i>');?></li>
         <li> <?= $this->tag->linkTo('admin/contacts', 'Контакты <i class="material-icons">settings_phone</i>')?> </li>
         <li> <?= $this->tag->linkTo('admin/users', 'Администраторы  <i class="material-icons">info</i>')?> </li>
